RESOLVED FIXED12189
REGRESSION(r18614-18640): Crash in WebCore::SharedBuffer::hasPlatformData()
https://bugs.webkit.org/show_bug.cgi?id=12189
Summary REGRESSION(r18614-18640): Crash in WebCore::SharedBuffer::hasPlatformData()
Matt Lilek
Reported 2007-01-09 22:08:47 PST
Loading the url makes safari go boom. Nightlies show it regressed between r18614 and 18640.
Attachments
Crashlog (7.66 KB, text/plain)
2007-01-09 22:09 PST, Matt Lilek
no flags
patch with change log (1.52 KB, patch)
2007-01-11 07:37 PST, Darin Adler
andersca: review+
Matt Lilek
Comment 1 2007-01-09 22:09:26 PST
Created attachment 12339 [details] Crashlog
Darin Adler
Comment 2 2007-01-11 07:37:46 PST
Created attachment 12362 [details] patch with change log
Anders Carlsson
Comment 3 2007-01-11 08:57:16 PST
Comment on attachment 12362 [details] patch with change log r=me
Darin Adler
Comment 4 2007-01-11 08:59:38 PST
Committed revision 18768.
Note You need to log in before you can comment on or make changes to this bug.