        Reviewed by Anders.

- fix http://bugs.webkit.org/show_bug.cgi?id=12189
          REGRESSION(r18614-18640): Crash in WebCore::SharedBuffer::hasPlatformData()

        * loader/mac/LoaderFunctionsMac.mm: (WebCore::CheckCacheObjectStatus):
        Added null check.



Canonical link: https://commits.webkit.org/15780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18768 268f45cc-cd09-0410-ab3c-d52691b4dbfc